--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.3",
-    "mongoose-unique-validator": "3.1.0"
+    "mongoose-unique-validator": "3.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
